--- a/source/styles/main.css
+++ b/source/styles/main.css
@@ -1,83 +1,81 @@
 /* Copyright (c) 2021-2026 Stuart Garner */
 /* Licensed under the MIT License: https://github.com/MuskDuck95/admin-hub/blob/main/LICENSE */
 
-/* 
+/* Table of Contents:
 
-    Table of Contents:
+    1 - Root variables
+        1.1 - Basic units
+        1.2 - Light mode (default)
+        1.3 - Dark mode
+        1.4 - Highlight colours
+        1.5 - Accessibility
+            1.5.1 - Reduce transparency
+            1.5.2 - Show element outlines
 
-        1 - Root variables
-            1.1 - Basic units
-            1.2 - Light mode (default)
-            1.3 - Dark mode
-            1.4 - Highlight colours
-            1.5 - Accessibility
-                1.5.1 - Reduce transparency
-                1.5.2 - Show element outlines
+    2 - Base HTML and body
 
-        2 - Base HTML and body
+    3 - Header
 
-        3 - Header
+    4 - Sidebar
 
-        4 - Sidebar
+    5 - Content
+        5.1 - Header
+            5.1.1 - Shared styling
+            5.1.2 - Sidebar expander
+            5.1.3 - Status container
+            5.1.4 - Search box
+            5.1.5 - RSS feed
+                5.1.5.1 - RSS feed popup
+                5.1.5.2 - RSS feed item
+            5.1.6 - Theme toggle
+            5.1.7 - View toggle
+            5.1.8 - Settings (and Accessibility)
+                5.1.8.1 - Settings popup
+                5.1.8.2 - Checkbox
+                5.1.8.3 - Radio button
+            5.1.9 - Clock
+                5.1.9.1 - Clock popup
+                5.1.9.2 - Clock item
+            5.1.10 - Button group
 
-        5 - Content
-            5.1 - Header
-                5.1.1 - Shared styling
-                5.1.2 - Sidebar expander
-                5.1.3 - Status container
-                5.1.4 - Search box
-                5.1.5 - RSS feed
-                    5.1.5.1 - RSS feed popup
-                    5.1.5.2 - RSS feed item
-                5.1.6 - Theme toggle
-                5.1.7 - View toggle
-                5.1.8 - Settings (and Accessibility)
-                    5.1.8.1 - Settings popup
-                    5.1.8.2 - Checkbox
-                    5.1.8.3 - Radio button
-                5.1.9 - Clock
-                    5.1.9.1 - Clock popup
-                    5.1.9.2 - Clock item
-                5.1.10 - Button group
+    6 - Dashboard view
 
-        6 - Dashboard view
+    7 - Tile
+        7.1 - Content container
+            7.1.1 - Header
+            7.1.2 - Body
+        7.2 - Image container
+        7.3 - Controls container
 
-        7 - Tile
-            7.1 - Content container
-                7.1.1 - Header
-                7.1.2 - Body
-            7.2 - Image container
-            7.3 - Controls container
+    8 - Statistic tile
 
-        8 - Statistic tile
+    9 - List view
+        9.1 - Shared styling
+        9.2 - Table
+        9.3 - Content
+        9.4 - Controls
 
-        9 - List view
-            9.1 - Shared styling
-            9.2 - Table
-            9.3 - Content
-            9.4 - Controls
+    10 - Tag
 
-        10 - Tag
+    11 - Hyperlink popup
 
-        11 - Hyperlink popup
+    12 - Modal dialogs
+        12.1 - Shared styling
+        12.2 - About dialog
+        12.3 - Details dialog
 
-        12 - Modal dialogs
-            12.1 - Shared styling
-            12.2 - About dialog
-            12.3 - Details dialog
+    13 - Tooltips
 
-        13 - Tooltips
+    14 - Screen size handling
+        14.1 - Container queries
+        14.2 - Media queries
 
-        14 - Screen size handling
-            14.1 - Container queries
-            14.2 - Media queries
+    15 - Animations
 
-        15 - Animations
-
-        16 - Global overrides
-            16.1 - Image dark mode handling
-            16.2 - Superellipse support
-            
+    16 - Global overrides
+        16.1 - Image dark mode handling
+        16.2 - Superellipse support
+        
 */
 
 
@@ -240,9 +238,9 @@
 /* 1.4 - Highlight colours */
 
 :root {
-    --highlight-background-colour: var(--l1-background-colour, hsl(247 10% 95%));
-    --highlight-text-colour: var(--text-colour, hsl(0 0% 5%));
-    --highlight-text-shadow-colour: transparent;
+    --highlight-background-colour: hsl(275 53% 15%);
+    --highlight-text-colour: hsl(0 0% 95%);
+    --highlight-text-shadow-colour: hsl(0 0% 5%);
 }
 
 [highlight-colour="blackcurrant"] {
@@ -446,7 +444,7 @@ body {
     margin: 16px 16px 0 16px;
 }
 
-.sidebar__hyperlink-group-title-text:first-child {
+.sidebar__image-wrapper + .sidebar__hyperlink-group-container > .sidebar__hyperlink-group-title-text:first-child {
     margin-top: 24px;
 }
 
@@ -497,12 +495,6 @@ body {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     user-select: none;
-}
-
-.sidebar__hyperlink-caption {
-    color: var(--secondary-text-colour, hsl(0 0% 30%));
-    font-size: 12px;
-    margin-left: 6px;
 }
 
 .sidebar__footer-controls-container {
@@ -2379,16 +2371,26 @@ a.tag:focus-visible {
     margin-top: 12px;
 }
 
-.about-dialog__body-text > p {
-    margin-block-start: 6px;
-    margin-block-end: 0;
-}
-
 .about-dialog__footer-text {
     color: var(--secondary-text-colour, hsl(0 0% 30%));
     font-size: 13px;
     font-weight: normal;
     margin-top: 12px;
+}
+
+.about-dialog__body-text > p,
+.about-dialog__footer-text > p {
+    margin-block-start: 6px;
+    margin-block-end: 0;
+}
+
+.about-dialog__content-container a {
+    border-radius: 999px;
+    outline-offset: 4px;
+}
+
+.about-dialog__content-container a:focus-visible {
+    outline: 2px solid var(--outline-colour, hsl(0 0% 5%));
 }
 
 /* 12.3 - Details dialog */
